--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
-.btn {
-  @apply ;
+@layer components {
+  .btn {
+    @apply inline-block px-5 py-3 rounded-lg shadow-lg bg-indigo-500 hover:bg-indigo-400 hover:-translate-y-0.5 focus:outline-none focus:ring focus:ring-offset-2 focus:ring-indigo-500 active:bg-indigo-600 transform transition text-white uppercase tracking-wider font-semibold text-sm sm:text-base;
+  }
 }
