--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,15 @@
 @import "tailwindcss";
+
 @layer components {
   .btn {
-    @apply inline-block px-5 py-3 rounded-lg shadow-lg bg-indigo-500 hover:bg-indigo-400 hover:-translate-y-0.5 focus:outline-none focus:ring focus:ring-offset-2 focus:ring-indigo-500 active:bg-indigo-600 transform transition text-white uppercase tracking-wider font-semibold text-sm sm:text-base;
+    @apply inline-block px-5 py-3 rounded-lg focus:outline-none focus:ring focus:ring-offset-2 uppercase tracking-wider font-semibold text-sm sm:text-base;
+  }
+
+  .btn-primary {
+    @apply bg-indigo-500 hover:bg-indigo-400 focus:ring-indigo-500 active:bg-indigo-600 text-white;
+  }
+
+  .btn-secondary {
+    @apply bg-gray-300 hover:bg-gray-200 focus:ring-gray-300 active:bg-gray-400 text-gray-800;
   }
 }
